构建手眼标定流程已经问题解决方案

--- a/01 连接ur5检查.md
+++ b/01 连接ur5检查.md
@@ -1,24 +1,123 @@
-# 第一步 确保ip互通
-    确保工控机和机械臂在同一局域网，且能互相ping通
-# 第二步 测试ros连接
-    启动驱动，打开监听窗口（不要关闭终端）
-    ros2 launch ur_robot_driver ur_control.launch.py ur_type:=ur5 robot_ip:=192.168.1.211 launch_rviz:=false reverse_ip:=192.168.1.10
-    这个ip是机械臂的ip
+# UR5 机械臂连接与测试指南
 
-    机械臂需要加载一个脚本，脚本中应包含external control结构，然后在安装设置中设置external control的ip地址为主机，监听端口一般为50002,可以使用ss -lntp | grep 5000命令来查看。
-# 第三步 测试和示教器的连接
-    打开新窗口输入
-    ros2 service call /dashboard_client/program_running ur_dashboard_msgs/srv/IsProgramRunning "{}"
-    若出现结果
-    response:
-    ur_dashboard_msgs.srv.IsProgramRunning_Response(answer='Program running: true', program_running=True, success=True)
-    为成功
+---
 
-# 第四步
-    一个小的检测脚本
-    运行
-    python3 tools/ur_send_small_trajectory.py --robot --delta 0.02 --duration 3.0
-    可以看到机器人轻微运动
-    
-# rviz控制机械臂
-    ros2 launch ur_moveit_config ur_moveit.launch.py ur_type:=ur5 robot_ip:=192.168.1.211 reverse_ip:=192.168.1.10
+## 步骤 1：网络连接验证
+
+首先确保工控机和机械臂能相互通信。
+
+**检查步骤：**
+1. 确保工控机和 UR5 机械臂在同一局域网
+2. 使用 `ping` 命令测试网络连通性
+   ```bash
+   ping 192.168.1.211
+   ```
+   （`192.168.1.211` 是本系统中 UR5 的 IP 地址）
+
+> ⚠️ **前提条件**：网络不通会导致驱动启动失败。如果 ping 不通，请检查网络配置。
+
+---
+
+## 步骤 2：启动 ROS2 驱动
+
+启动 UR5 机械臂的 ROS2 驱动程序。
+
+**在终端中运行：**
+```bash
+ros2 launch ur_robot_driver ur_control.launch.py \
+  ur_type:=ur5 \
+  robot_ip:=192.168.1.211 \
+  launch_rviz:=false \
+  reverse_ip:=192.168.1.10
+```
+
+**参数说明：**
+- `ur_type:=ur5`: 机械臂型号
+- `robot_ip:=192.168.1.211`: UR5 的 IP 地址
+- `reverse_ip:=192.168.1.10`: 本工控机的 IP 地址
+- `launch_rviz:=false`: 不启动可视化界面（减少资源占用）
+
+> 💡 **提示**：保持这个终端窗口运行，不要关闭。
+
+**示教器端配置：**
+
+1. UR5 示教器需要加载一个包含 `External Control` 结构的脚本
+2. 在示教器的安装设置中，配置 `External Control` IP 地址为本工控机（`192.168.1.10`）
+3. 监听端口通常为 `50002`，可用以下命令验证：
+   ```bash
+   ss -lntp | grep 5000
+   ```
+
+---
+
+## 步骤 3：验证与示教器的连接
+
+打开新的终端窗口，测试与示教器的通信。
+
+**运行验证命令：**
+```bash
+ros2 service call /dashboard_client/program_running ur_dashboard_msgs/srv/IsProgramRunning "{}"
+```
+
+**预期输出示例：**
+```
+response:
+ur_dashboard_msgs.srv.IsProgramRunning_Response(
+  answer='Program running: true',
+  program_running=True,
+  success=True
+)
+```
+
+> ✅ **成功标志**：如果收到上述响应且 `success=True`，说明连接正常。
+
+---
+
+## 步骤 4：运行小型轨迹测试
+
+执行一个简单的运动脚本，验证机械臂控制是否正常。
+
+**运行测试脚本：**
+```bash
+python3 tools/ur_send_small_trajectory.py --robot --delta 0.02 --duration 3.0
+```
+
+**参数说明：**
+- `--robot`: 实际控制机械臂（不是模拟）
+- `--delta 0.02`: 每步增量
+- `--duration 3.0`: 运动持续时间（秒）
+
+**预期现象：**  
+机械臂会执行一个小幅运动，验证控制链路畅通。
+
+---
+
+## 步骤 5：使用 MoveIt 进行示教和规划
+
+使用 MoveIt 进行可视化控制和轨迹规划。
+
+**启动 MoveIt + RViz：**
+```bash
+ros2 launch ur_moveit_config ur_moveit.launch.py \
+  ur_type:=ur5 \
+  robot_ip:=192.168.1.211 \
+  reverse_ip:=192.168.1.10
+```
+
+**功能：**
+- 在 RViz 中可视化机械臂
+- 拖动机器人各关节进行示教
+- 规划和执行轨迹
+- 实时监控机械臂状态
+
+---
+
+## 快速参考
+
+| 操作 | 命令 |
+|------|------|
+| 启动驱动 | `ros2 launch ur_robot_driver ur_control.launch.py ur_type:=ur5 robot_ip:=192.168.1.211 launch_rviz:=false reverse_ip:=192.168.1.10` |
+| 检查程序运行状态 | `ros2 service call /dashboard_client/program_running ur_dashboard_msgs/srv/IsProgramRunning "{}"` |
+| 运行轨迹测试 | `python3 tools/ur_send_small_trajectory.py --robot --delta 0.02 --duration 3.0` |
+| 启动 MoveIt 规划 | `ros2 launch ur_moveit_config ur_moveit.launch.py ur_type:=ur5 robot_ip:=192.168.1.211 reverse_ip:=192.168.1.10` |
+| 查看监听端口 | `ss -lntp \| grep 5000` |
