--- a/02 相机连接测试.md
+++ b/02 相机连接测试.md
@@ -1,29 +1,132 @@
-# 发布相机节点
-    ros2 launch depthai_examples rgb_stereo_node.launch.py
+# OAK-D 相机连接与测试指南
 
-# 主要话题与发布节点
-    ros2 topic info /color/video/image -v
-    ros2 topic info /stereo/depth -v
+---
 
-    /color/video/image   （彩色图像，sensor_msgs/Image）
-    /stereo/depth        （深度图像，sensor_msgs/Image）
+## 步骤 1：启动相机节点
 
-    通过 ros2 topic info -v 可确认发布者节点：
-    - /stereo/depth 的发布节点：rgb_stereo_node
+发布 OAK-D 相机的图像和深度数据流。
 
-# 使用 image_tools 查看图像
-    可以先用 ros2 topic list 找到相机话题：
-    ros2 topic list | grep -E '/image$|/depth$'
+**运行相机驱动：**
+```bash
+ros2 launch depthai_examples rgb_stereo_node.launch.py
+```
 
-    查看彩色图：
-    ros2 run image_tools showimage --ros-args -r image:=/color/video/image
+> 💡 **提示**：保持此终端运行，驱动会持续发布图像和深度数据。
 
-    查看深度图：
-    并不可行，会出现编码问题
-    ros2 run image_tools showimage --ros-args -r image:=/stereo/depth
+---
 
-# 查看图像建议使用 rviz2
-    出现问题：不能使用ubuntu商店自带的vscode（即snap版本）终端启动rviz2。
-    使用官网下载的deb版本最好
+## 步骤 2：确认话题和发布节点
+
+验证相机节点是否正确发布话题。
+
+**查看特定话题信息：**
+```bash
+ros2 topic info /color/video/image -v
+ros2 topic info /stereo/depth -v
+```
+
+**主要话题说明：**
+
+| 话题名 | 数据类型 | 说明 |
+|-------|---------|------|
+| `/color/video/image` | `sensor_msgs/Image` | RGB 彩色图像 |
+| `/stereo/depth` | `sensor_msgs/Image` | 深度图像 |
+| `/color/video/camera_info` | `sensor_msgs/CameraInfo` | 相机标定参数 |
+
+**快速查找相机话题：**
+```bash
+ros2 topic list | grep -E '/image$|/depth$'
+```
+
+---
+
+## 步骤 3：可视化图像数据
+
+### 3.1 查看彩色图像
+
+使用 `image_tools` 实时显示相机拍摄的图像：
+
+```bash
+ros2 run image_tools showimage --ros-args -r image:=/color/video/image
+```
+
+**用途：**
+- 确认相机是否正常工作
+- 调整相机位置和焦距
+- 检查图像质量和亮度
+
+按 `Ctrl+C` 关闭窗口。
+
+### 3.2 查看深度图像
+
+> ⚠️ **注意**：直接使用 `image_tools` 查看深度图会出现编码问题，**不推荐**此方法：
+> ```bash
+> ros2 run image_tools showimage --ros-args -r image:=/stereo/depth  # ❌ 不可行
+> ```
+
+**推荐替代方案**：使用 RViz2 进行深度图可视化（见下一节）。
+
+---
+
+## 步骤 4：使用 RViz2 进行高级可视化
+
+RViz2 支持多种图像编码，可以正确显示深度和彩色图像。
+
+**启动 RViz2：**
+```bash
+rviz2
+```
+
+**配置步骤：**
+1. 在左侧 "Add" 面板中添加 "Image" 显示
+2. 将 Image 主题设置为：
+   - 彩色图：`/color/video/image`
+   - 深度图：`/stereo/depth`
+3. 可同时查看多个图像或点云
+
+> 💡 **提示**：RViz2 比 `image_tools` 功能更强大，支持实时调整显示参数。
+
+---
+
+## 故障排查
+
+### 问题 1：RViz2 无法启动
+
+**症状**：  
+使用 VS Code 的终端（snap 版本）启动 RViz2 时失败。
+
+**原因**：  
+Ubuntu 商店的 snap 版本 VS Code 的终端权限受限。
+
+**解决方案**：
+1. 卸载 snap 版本的 VS Code
+2. 从官网下载并安装 deb 版本：https://code.visualstudio.com/download
+3. 或者直接在系统终端（不通过 VS Code）运行 RViz2
+
+### 问题 2：相机无法连接
+
+**症状**：  
+启动驱动后无任何输出或直接报错。
+
+**排查步骤：**
+1. 确认相机通过 USB 连接到工控机
+2. 查看 USB 设备是否被识别：
+   ```bash
+   lsusb | grep -i oak
+   ```
+3. 检查驱动日志是否有错误信息
+
+---
+
+## 快速参考
+
+| 操作 | 命令 |
+|------|------|
+| 启动相机驱动 | `ros2 launch depthai_examples rgb_stereo_node.launch.py` |
+| 查看话题信息 | `ros2 topic info <topic_name> -v` |
+| 查找相机话题 | `ros2 topic list \| grep -E '/image$\|/depth$'` |
+| 查看彩色图 | `ros2 run image_tools showimage --ros-args -r image:=/color/video/image` |
+| 启动 RViz2 | `rviz2` |
+| 查看 USB 设备 | `lsusb \| grep -i oak` |
 
     
