--- a/06 物体识别抓取.md
+++ b/06 物体识别抓取.md
@@ -38,11 +38,11 @@ ros2 launch grasp_control bringup.launch.py \
 
 ```bash
 # 终端 1：相机
-ros2 launch depthai_examples rgb_stereo_node.launch.py
+ros2 launch depthai_ros_driver camera.launch.py params_file:=$(ros2 pkg prefix yolo_center_detector)/share/yolo_center_detector/config/extended_disp.yaml
 
 # 终端 2：机械臂
 ros2 launch ur_robot_driver ur_control.launch.py \
-    ur_type:=ur5 robot_ip:=192.168.1.211 reverse_ip:=192.168.1.10
+    ur_type:=ur5 robot_ip:=192.168.1.211 reverse_ip:=192.168.1.10 launch_rviz:=false
 
 # 终端 3：手眼标定 TF
 ros2 launch easy_handeye2 publish.launch.py name:=ur5_oak_eyehand
