修改关节角限制，解决多解问题

--- a/06 物体识别抓取.md
+++ b/06 物体识别抓取.md
@@ -55,6 +55,8 @@ ros2 launch yolo_center_detector yolo_center.launch.py
 # 终端 6：MoveIt2
 ros2 launch ur_moveit_config ur_moveit.launch.py ur_type:=ur5
 
+ros2 launch ur_moveit_config ur_moveit.launch.py ur_type:=ur5 --ros-args --params-file /home/rvl/ros2_ws/src/grasp_control/config/pick_ik.yaml
+
 # 终端 7：抓取控制
 ros2 launch grasp_control grasp_control.launch.py
 ```
