修复流程控制问题

--- a/06 物体识别抓取.md
+++ b/06 物体识别抓取.md
@@ -55,8 +55,6 @@ ros2 launch yolo_center_detector yolo_center.launch.py
 # 终端 6：MoveIt2
 ros2 launch ur_moveit_config ur_moveit.launch.py ur_type:=ur5
 
-ros2 launch ur_moveit_config ur_moveit.launch.py ur_type:=ur5 --ros-args --params-file /home/rvl/ros2_ws/src/grasp_control/config/pick_ik.yaml
-
 # 终端 7：抓取控制
 ros2 launch grasp_control grasp_control.launch.py
 ```
@@ -148,8 +146,7 @@ ros2 topic echo /centers
 ros2 run tf2_tools view_frames
 
 # 手动控制灵巧手
-ros2 service call /qbsofthand_control_node/set_closure \
-    qbsofthand_control/srv/SetClosure "{closure: 0.5, duration_sec: 1.0}"
+ros2 service call /qbsofthand_control_node/set_closure qbsofthand_control/srv/SetClosure "{closure: 0.5, duration_sec: 1.0}"
 ```
 
 ---
