readme插入图片和视频

--- a/06 物体识别抓取.md
+++ b/06 物体识别抓取.md
@@ -156,6 +156,6 @@ ros2 service call /qbsofthand_control_node/set_closure qbsofthand_control/srv/Se
 | 问题 | 解决方案 |
 |------|----------|
 | TF 变换失败 | 确认手眼标定 publish 已启动 |
-| MoveIt2 规划失败 | 检查目标位置是否在工作空间内 |
+| MoveIt2 规划失败 | 检查目标位置是否在工作空间内 检查关节角限制 |
 | 检测超时 | 确认 YOLO 节点运行且物体在视野内 |
 | 深度为 0 | 物体太近/太远/反光，调整位置 |
